Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <label>Product</label>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>