Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Product__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>active</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>