Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Product__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>code</label>
    <type>Text</type>
    <length>255</length>
</CustomField>