Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Product__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>