Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Product__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>price</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>