Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Product__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>productType</label>
    <type>Text</type>
    <length>255</length>
</CustomField>