Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Product__c/fields/StockLevel__c.field-meta.xml
<CustomField>
    <fullName>StockLevel__c</fullName>
    <label>stockLevel</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>